# armadillo-tool

./: .gitignore  CMakeLists.txt  README.md  config.yaml
config/: deploy.rb
etc/: CMakeLists.txt  main.c
etc/cap/config/: deploy.rb
etc/cap/config/deploy/: production.rb
etc/ruby/: arm_cui_project.rb  capistrano.rb  dir.rb  project.rb
include/: orig.h
lib/: CMakeLists.txt  control_led.c  open_file.c  orig.h  str2int.c  turn_off_led.c  turn_on_led.c  write_file.c
